# perplexity-search-cli

./: CHANGELOG.md  LICENSE  README.md  perplexity_cli.py  pyproject.toml  test_tty.py
.github/workflows/: publish.yml
perplexity_search_cli/: cli.py
