[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexity-search-cli"
version = "0.1.0"
description = "Command line interface for Perplexity AI API"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
perplexity-search-cli = "perplexity_search_cli.cli:main"
